--- a/public/index.html
+++ b/public/index.html
@@ -277,6 +277,10 @@
                     <span class="fa fa-window-close"></span>
                     <span id="menuExitLabel"></span>
                   </div>
+                  <div class="channel-video other-option focusable" data-other-id="5">
+                    <span class="fa fa-envelope"></span>
+                    <span id="menuMailsLabel"></span>
+                  </div>
                 </div>
               </div>
             </div>
